Avoid 2px jump when item becomes active

--- a/resources/assets/css/front/components/page.scss
+++ b/resources/assets/css/front/components/page.scss
@@ -43,7 +43,7 @@ a:hover {
 }
 
 .active a {
-  @apply border-b-2 rounded-none border-blue;
+  @apply border-blue;
 }
 
 img {
